# AetherEval

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
aethereval/: __init__.py  bootstrap.py  cli.py  config.py  io.py  metrics_utils.py  runner.py  task_register.py  types.py
aethereval/core/: __init__.py  io.py  runner.py  task_defaults.py  task_register.py  types.py  vllm_backend.py
aethereval/metrics/: __init__.py  bootstrap.py  common.py
benchmarks/: __init__.py
benchmarks/agieval_en/: README.md  metrics.py  prepare_data.py  task.py
benchmarks/aime24/: README.md  metrics.py  prepare_data.py  task.py
benchmarks/aime25/: README.md  metrics.py  prepare_data.py  task.py
benchmarks/bbh/: README.md  metrics.py  prepare_data.py  task.py
benchmarks/gpqa_diamond/: README.md  metrics.py  prepare_data.py  task.py
benchmarks/humaneval_plus/: README.md  eval_runtime.py  metrics.py  prepare_data.py  task.py
benchmarks/ifbench/: README.md  __init__.py  metrics.py  prepare_data.py  prepare_nltk.py  task.py
benchmarks/ifeval/: README.md  __init__.py  metrics.py  prepare_data.py  prepare_nltk.py  task.py
benchmarks/livecodebench/: README.md  __init__.py  lcb_eval_runtime.py  metrics.py  prepare_data.py  task.py
benchmarks/mmlu_pro/: README.md  metrics.py  prepare_data.py  task.py
benchmarks/zebralogic/: README.md  metrics.py  prepare_data.py  (+1 more)
configs/: example.yaml  task_defaults.yaml
tests/: test_bootstrap.py  test_config.py  test_io.py  test_metrics.py  test_runner.py  test_task_register.py  test_vllm_backend.py
(+20 files in other folders)
