[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethereval"
version = "0.1.0"
description = "Minimal generative-only LLM evaluation framework with offline vLLM backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vllm>=0.10.0,<0.11",
  "ray>=2.9,<3",
  "tqdm>=4.66,<5",
  "PyYAML>=6.0,<7",
  "langdetect>=1.0.9,<2",
  "nltk>=3.8,<4",
  "emoji>=2.11,<3",
  "syllapy>=0.7,<1",
  "immutabledict>=4.2,<5",
  "absl-py>=2.1,<3",
  "math-verify>=0.9,<1",
]

[project.scripts]
aethereval = "aethereval.cli:main"

[tool.setuptools.packages.find]
include = ["aethereval*"]
