[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethereval"
version = "0.1.0"
description = "Minimal generative-only LLM evaluation framework with offline vLLM backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vllm",
  "ray",
  "tqdm",
  "PyYAML",
  "langdetect",
  "nltk",
  "emoji",
  "syllapy",
  "immutabledict",
  "absl-py",
  "math-verify",
]

[project.scripts]
aethereval = "aethereval.cli:main"

[tool.setuptools.packages.find]
include = ["aethereval*", "benchmarks*"]
